{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 21,
  "lineage": "43d88673-ab3e-e7de-3dca-eb5df7812a49",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "each": "list",
      "provider": "module.linuxservers.provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkInterfaces/nic-myvm-0",
            "ip_configuration": [
              {
                "name": "ipconfig0",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/publicIPAddresses/myvm-0-publicIP",
                "subnet_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
              }
            ],
            "location": "centralindia",
            "name": "nic-myvm-0",
            "network_security_group_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/myvm-22-nsg",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraform-compute",
            "tags": {
              "source": "terraform"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.vm",
            "azurerm_public_ip.vm",
            "azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "each": "list",
      "provider": "module.windowsservers.provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkInterfaces/nic-mywinvm-0",
            "ip_configuration": [
              {
                "name": "ipconfig0",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/publicIPAddresses/mywinvm-0-publicIP",
                "subnet_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
              }
            ],
            "location": "centralindia",
            "name": "nic-mywinvm-0",
            "network_security_group_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/mywinvm-3389-nsg",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "terraform-compute",
            "tags": {
              "source": "terraform"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.vm",
            "azurerm_public_ip.vm",
            "azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "security_group",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "location": "centralindia",
            "name": "acctsecgrp",
            "resource_group_name": "terraform-compute",
            "security_rule": [],
            "tags": {
              "tag1": "",
              "tag2": ""
            }
          },
          "depends_on": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "module.linuxservers.provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/myvm-22-nsg",
            "location": "centralindia",
            "name": "myvm-22-nsg",
            "resource_group_name": "terraform-compute",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow remote protocol in from all locations",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_remote_22_in_all",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "source": "terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vm",
            "module.os"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "module.windowsservers.provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/mywinvm-3389-nsg",
            "location": "centralindia",
            "name": "mywinvm-3389-nsg",
            "resource_group_name": "terraform-compute",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow remote protocol in from all locations",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_remote_3389_in_all",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "source": "terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vm",
            "module.os"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule_rdp",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "acctsecgrp",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "terraform-compute",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule_ssh",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "acctsecgrp",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "terraform-compute",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "each": "list",
      "provider": "module.linuxservers.provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "linsimplevmips",
            "fqdn": "linsimplevmips.centralindia.cloudapp.azure.com",
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/publicIPAddresses/myvm-0-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "myvm-0-publicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "terraform-compute",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "each": "list",
      "provider": "module.windowsservers.provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "winsimplevmips",
            "fqdn": "winsimplevmips.centralindia.cloudapp.azure.com",
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/publicIPAddresses/mywinvm-0-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "mywinvm-0-publicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "terraform-compute",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "network_security_group_id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/networkSecurityGroups/acctsecgrp",
            "resource_group_name": "terraform-compute",
            "virtual_network_name": "acctvnet"
          },
          "depends_on": [
            "azurerm_network_security_group.security_group",
            "azurerm_resource_group.network",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/e5c53a81-f5c9-4864-b65a-d6fc347b4e2d/resourceGroups/terraform-compute/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "centralindia",
            "name": "acctvnet",
            "resource_group_name": "terraform-compute",
            "tags": {
            }
          },
          "depends_on": [
            "azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}